Small fix in css to avoid showing scrollbars on the entire document.

--- a/web/ide/ide.css
+++ b/web/ide/ide.css
@@ -36,6 +36,7 @@
   html, body, .fullscreen {
     width: 100%;
     height: 100%;
+    overflow: hidden;
   }
 
   .dark-theme {
@@ -91,7 +92,7 @@
   }
 
   .blocklyWidgetDiv {
-    
+
   }
 
 
